# aa2cg

./: .gitignore  CMakeLists.txt  README.md
data/: amorphous_mapping_matrix.ini  amorphous_mapping_scheme.ini  crystal_mapping_matrix.ini  crystal_mapping_scheme.ini  ipp_9m1c-01.lammps  ipp_alpha_a1b1c2-01.lammps  mapping_matrix_1.txt  mapping_matrix_2.txt  mapping_matrix_systematic.txt  pe_80m25c-01.lammps
include/: blocks.h  cg_data.h  cg_dump.h  inputs.h  lammps_data.h  lammps_dump.h  mapping_matrix.h  outputs.h  reorder.h
scripts/: compute_bonds.py  run_aa2cg_for_all.py
src/: blocks.cpp  cg_data.cpp  cg_dump.cpp  inputs.cpp  lammps_data.cpp  lammps_dump.cpp  main.cpp  mapping_matrix.cpp  outputs.cpp  reorder.cpp
